--- a/package.json
+++ b/package.json
@@ -13,30 +13,25 @@
     "build": "pnpm clean && tsx esbuild.config.ts && chmod +x build/bundle.js",
     "clean": "rimraf build",
     "dev": "tsx watch src/index.ts",
-    "lint": "prettier --check . && eslint .",
-    "lint:fix": "prettier --write . && eslint . --fix",
+    "lint:check": "biome check .",
+    "lint:fix": "biome check --fix .",
+    "lint:format": "biome format --write .",
     "start": "tsx src/index.ts",
     "test": "vitest src",
     "test:coverage": "vitest run --coverage"
   },
   "devDependencies": {
-    "@eslint/compat": "^1.2.8",
-    "@eslint/js": "^9.25.0",
+    "@biomejs/biome": "1.9.4",
     "@tsconfig/node20": "^20.1.5",
     "@types/node": "^22.14.1",
     "@vitest/coverage-v8": "^3.1.1",
     "dotenv": "^16.5.0",
     "esbuild": "^0.25.2",
-    "eslint": "^9.25.0",
-    "eslint-config-prettier": "^10.1.2",
-    "eslint-plugin-prettier": "^5.2.6",
     "globals": "^16.0.0",
-    "prettier": "^3.5.3",
     "rimraf": "^6.0.1",
     "tsc-alias": "^1.8.15",
     "tsx": "^4.19.3",
     "typescript": "^5.8.3",
-    "typescript-eslint": "^8.30.1",
     "vite-tsconfig-paths": "^5.1.4",
     "vitest": "^3.1.1"
   },
@@ -49,8 +44,6 @@
     "pnpm": "10.0.0"
   },
   "pnpm": {
-    "onlyBuiltDependencies": [
-      "esbuild"
-    ]
+    "onlyBuiltDependencies": ["esbuild"]
   }
 }
