--- a/package.json
+++ b/package.json
@@ -29,7 +29,6 @@
     "esbuild": "^0.25.2",
     "globals": "^16.0.0",
     "rimraf": "^6.0.1",
-    "tsc-alias": "^1.8.15",
     "tsx": "^4.19.3",
     "typescript": "^5.8.3",
     "vite-tsconfig-paths": "^5.1.4",
@@ -44,8 +43,6 @@
     "pnpm": "10.0.0"
   },
   "pnpm": {
-    "onlyBuiltDependencies": [
-      "esbuild"
-    ]
+    "onlyBuiltDependencies": ["esbuild"]
   }
 }
