Update dependencies and migrate to Biome 2.x
- Bump all devDependencies to latest versions
- Migrate biome.jsonc to v2 schema (includes pattern syntax)
- Reorganize linter rules per Biome 2.x requirements

--- a/package.json
+++ b/package.json
@@ -21,18 +21,18 @@
     "test:coverage": "vitest run --coverage"
   },
   "devDependencies": {
-    "@biomejs/biome": "1.9.4",
+    "@biomejs/biome": "2.3.11",
     "@tsconfig/node22": "^22.0.1",
-    "@types/node": "^22.14.1",
-    "@vitest/coverage-v8": "^3.1.2",
-    "dotenv": "^16.5.0",
-    "esbuild": "^0.25.2",
-    "globals": "^16.0.0",
-    "rimraf": "^6.0.1",
-    "tsx": "^4.19.3",
-    "typescript": "^5.8.3",
-    "vite-tsconfig-paths": "^5.1.4",
-    "vitest": "^3.1.2"
+    "@types/node": "^25.0.0",
+    "@vitest/coverage-v8": "^4.0.10",
+    "dotenv": "^17.2.0",
+    "esbuild": "^0.27.2",
+    "globals": "^17.0.0",
+    "rimraf": "^6.1.0",
+    "tsx": "^4.21.0",
+    "typescript": "^5.9.3",
+    "vite-tsconfig-paths": "^6.0.4",
+    "vitest": "^4.0.10"
   },
   "packageManager": "pnpm@10.0.0",
   "engines": {
@@ -43,6 +43,8 @@
     "pnpm": "10.0.0"
   },
   "pnpm": {
-    "onlyBuiltDependencies": ["esbuild"]
+    "onlyBuiltDependencies": [
+      "esbuild"
+    ]
   }
 }
