--- a/biome.jsonc
+++ b/biome.jsonc
@@ -1,7 +1,7 @@
 {
-  "$schema": "https://biomejs.dev/schemas/1.9.4/schema.json",
+  "$schema": "https://biomejs.dev/schemas/2.3.11/schema.json",
   "vcs": { "enabled": false, "clientKind": "git", "useIgnoreFile": false },
-  "files": { "ignoreUnknown": false, "ignore": [] },
+  "files": { "ignoreUnknown": false, "includes": ["**", "!!**/coverage/**"] },
   "formatter": {
     "enabled": true,
     "useEditorconfig": true,
@@ -12,19 +12,18 @@
     "lineWidth": 100,
     "attributePosition": "auto",
     "bracketSpacing": true,
-    "ignore": ["**/pnpm-lock.yaml", "**/LICENSE"]
+    "includes": ["**", "!**/pnpm-lock.yaml", "!**/LICENSE"]
   },
-  "organizeImports": { "enabled": true },
+  "assist": { "actions": { "source": { "organizeImports": "on" } } },
   "linter": {
     "enabled": true,
     "rules": {
       "recommended": false,
       "complexity": {
         "noExtraBooleanCast": "error",
-        "noMultipleSpacesInRegularExpressionLiterals": "error",
         "noUselessCatch": "error",
         "noUselessTypeConstraint": "error",
-        "noWith": "error"
+        "noAdjacentSpacesInRegex": "error"
       },
       "correctness": {
         "noConstAssign": "error",
@@ -47,15 +46,16 @@
         "noUnusedLabels": "error",
         "noUnusedPrivateClassMembers": "error",
         "noUnusedVariables": "error",
-        "useArrayLiterals": "off",
         "useIsNan": "error",
         "useValidForDirection": "error",
-        "useYield": "error"
+        "useYield": "error",
+        "useValidTypeof": "error"
       },
       "style": {
         "noNamespace": "error",
         "useAsConstAssertion": "error",
-        "useBlockStatements": "off"
+        "useBlockStatements": "off",
+        "useArrayLiterals": "off"
       },
       "suspicious": {
         "noAsyncPromiseExecutor": "error",
@@ -85,24 +85,25 @@
         "noUnsafeNegation": "error",
         "useGetterReturn": "error",
         "useNamespaceKeyword": "error",
-        "useValidTypeof": "error"
+        "noWith": "error"
       }
     },
-    "ignore": [
-      "**/node_modules/",
-      "coverage/",
-      "build/",
-      "**/.env",
-      "**/.env.*",
-      "!.env.example",
-      ".vscode/*",
-      "!.vscode/extensions.json",
-      "!.vscode/settings.json",
-      "**/.idea/",
-      "**/*.tsbuildinfo",
-      "**/.pnpm-debug.log*",
-      "**/.DS_Store",
-      "**/Thumbs.db"
+    "includes": [
+      "**",
+      "!**/node_modules/",
+      "!**/coverage/",
+      "!**/build/",
+      "!**/.env",
+      "!**/.env.*",
+      "!**/!.env.example",
+      "!**/.vscode/**/*",
+      "!**/!.vscode/extensions.json",
+      "!**/!.vscode/settings.json",
+      "!**/.idea/",
+      "!**/*.tsbuildinfo",
+      "!**/.pnpm-debug.log*",
+      "!**/.DS_Store",
+      "!**/Thumbs.db"
     ]
   },
   "javascript": {
@@ -121,26 +122,25 @@
   },
   "overrides": [
     {
-      "include": ["*.md"],
+      "includes": ["**/*.md"],
       "formatter": { "indentStyle": "space", "indentWidth": 2, "lineWidth": 80 }
     },
     {
-      "include": ["**/*.ts", "**/*.tsx", "**/*.mts", "**/*.cts"],
+      "includes": ["**/*.ts", "**/*.tsx", "**/*.mts", "**/*.cts"],
       "linter": {
         "rules": {
-          "complexity": { "noWith": "off" },
+          "complexity": { "noArguments": "error" },
           "correctness": {
             "noConstAssign": "off",
             "noGlobalObjectCalls": "off",
             "noInvalidBuiltinInstantiation": "off",
             "noInvalidConstructorSuper": "off",
-            "noNewSymbol": "off",
             "noSetterReturn": "off",
             "noUndeclaredVariables": "off",
             "noUnreachable": "off",
             "noUnreachableSuper": "off"
           },
-          "style": { "noArguments": "error", "noVar": "error", "useConst": "error" },
+          "style": { "useConst": "error" },
           "suspicious": {
             "noClassAssign": "off",
             "noDuplicateClassMembers": "off",
@@ -150,11 +150,13 @@
             "noImportAssign": "off",
             "noRedeclare": "off",
             "noUnsafeNegation": "off",
-            "useGetterReturn": "off"
+            "useGetterReturn": "off",
+            "noWith": "off",
+            "noVar": "error"
           }
         }
       }
     },
-    { "include": ["**/*.ts"], "javascript": { "globals": [] } }
+    { "includes": ["**/*.ts"], "javascript": { "globals": [] } }
   ]
 }
